# dear_store

./: .env.example  .gitignore  CLAUDE.md  DEARSTORE_CONTEXT.md  DEARSTORE_SKILL.md  Makefile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  sample.html
.claude/: settings.local.json
apps/web/: README.md  next.config.ts  package.json  tailwind.config.ts
apps/web/app/: globals.css  layout.tsx
apps/web/app/(dashboard)/: page.tsx
apps/web/components/atoms/: Button.tsx  Icon.tsx  InfoRow.tsx  Input.tsx  KpiCard.tsx  Spinner.tsx  StatusChip.tsx
apps/web/components/molecules/: ProductCard.tsx  ScrapeJobItem.tsx
apps/web/components/organisms/: ProductGrid.tsx  RecentJobs.tsx  Sidebar.tsx
apps/web/components/templates/: AppLayout.tsx
apps/web/db/migrations/: 0000_dry_odin.sql  0001_bored_kate_bishop.sql  0002_product_extended_fields.sql
apps/web/db/schema/: exchange_rates.ts  index.ts  markets.ts  products.ts  qc.ts  scrape_jobs.ts
apps/web/lib/: db.ts  minio.ts  queue.ts
apps/web/workers/: analytics.worker.ts
infra/db/: schema.sql
services/market/: Dockerfile  main.py  pyproject.toml
services/processor/: Dockerfile  main.py  pyproject.toml
services/scraper/: Dockerfile  README.md  aliexpress.py  config.py  db.py  main.py  pyproject.toml  requirements.txt  storage.py  worker.py
stitch_global_sourcing_manager/_1/: code.html
stitch_global_sourcing_manager/_2/: code.html
stitch_global_sourcing_manager/_3/: code.html
stitch_global_sourcing_manager/_4/: code.html
stitch_global_sourcing_manager/stitch_ledger/: DESIGN.md
(+12 files in other folders)
